@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.auties00</groupId>
     <artifactId>whatsappweb4j</artifactId>
-    <version>2.2.8-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Standalone fully-featured Whatsapp Web API for Java and Kotlin</description>
     <url>https://github.com/Auties00/WhatsappWeb4j</url>
@@ -16,7 +16,7 @@
     <licenses>
         <license>
             <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -66,6 +66,13 @@
     </profiles>
     <packaging>jar</packaging>
 
+    <repositories>
+        <repository>
+            <id>projectlombok.org</id>
+            <url>https://projectlombok.org/edge-releases</url>
+        </repository>
+    </repositories>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>
@@ -75,30 +82,55 @@
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
         <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
-        <delombok.plugin.version>1.18.20</delombok.plugin.version>
+        <delombok.plugin.version>1.18.20.0</delombok.plugin.version>
         <nexus.staging.maven.plugin.version>1.6.7</nexus.staging.maven.plugin.version>
-        <lombok.version>1.18.22</lombok.version>
-        <maven.jmod.version>3.0.0-alpha.1</maven.jmod.version>
-        <jackson.version>2.13.1</jackson.version>
+        <bouncy.castle.version>1.70</bouncy.castle.version>
+        <zxing.version>3.5.0</zxing.version>
+        <protoc.version>1.13</protoc.version>
+        <tyrus.version>2.0.2</tyrus.version>
+        <lombok.version>1.18.24</lombok.version>
         <junit.version>5.8.2</junit.version>
-        <bouncy.castle.version>1.69</bouncy.castle.version>
-        <zxing.version>3.4.1</zxing.version>
-        <protoc.version>1.8</protoc.version>
-        <tyrus.version>2.0.0</tyrus.version>
-        <jna.version>5.9.0</jna.version>
-        <delombok.output>${project.build.directory}\delomboked-sources</delombok.output>
+        <jna.version>5.11.0</jna.version>
+        <jackson.version>2.13.3</jackson.version>
+        <jackson.modules.version>2.13.3</jackson.modules.version>
+        <jackson.map.version>1.3-SNAPSHOT</jackson.map.version>
+        <curve25519.version>1.1</curve25519.version>
+        <bytes.version>1.2</bytes.version>
+        <ffmpeg.version>0.7.0</ffmpeg.version>
+        <classgraph.version>4.8.146</classgraph.version>
+        <reflection.version>1.2</reflection.version>
+        <caffeine.version>3.1.0</caffeine.version>
+        <lazysodium.version>5.1.1</lazysodium.version>
+        <delombok.input>${project.basedir}/src/main/java</delombok.input>
+        <delombok.output>${project.build.directory}/delombok</delombok.output>
     </properties>
 
     <build>
         <plugins>
+            <!-- Attach source code -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven.source.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- Compile the project-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <compileSourceRoots>${delombok.input}</compileSourceRoots>
+                    <source>17</source>
+                    <target>17</target>
                     <release>${java.version}</release>
                     <annotationProcessorPaths>
                         <path>
@@ -128,66 +160,6 @@
                 </dependencies>
                 <configuration>
                     <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-
-            <!-- Generate and attach the sourcecode -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>${maven.source.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- Delombok the project to prepare for javadoc generation -->
-            <plugin>
-                <groupId>com.github.auties00</groupId>
-                <artifactId>delombok-plugin</artifactId>
-                <version>${delombok.plugin.version}</version>
-                <configuration>
-                    <rootDirectory>${project.build.sourceDirectory}</rootDirectory>
-                    <outputDirectory>${delombok.output}</outputDirectory>
-                    <excludedFiles>
-                        <excludedFile>module-info.java</excludedFile>
-                    </excludedFiles>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>delombok</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- Generate and attach javadocs from delomboked source -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <sourcepath>${delombok.output}</sourcepath>
-                    <release>${java.version}</release>
-                    <failOnError>true</failOnError>
-                    <additionalOptions>--enable-preview</additionalOptions>
-                    <debug>true</debug>
-                    <verbose>true</verbose>
                 </configuration>
             </plugin>
 
@@ -221,49 +193,77 @@
     </build>
 
     <dependencies>
-        <!-- WebSocket client, TOOD: Replace with native implementation when bug fix is found -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.tyrus</groupId>
             <artifactId>tyrus-server</artifactId>
             <version>${tyrus.version}</version>
         </dependency>
-
-        <!-- Project lombok, used for annotations -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-        </dependency>
-
-        <!-- Cryptographic dependencies -->
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk15on</artifactId>
-            <version>${bouncy.castle.version}</version>
-        </dependency>
-
-        <!-- Zxing -->
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
             <version>${zxing.version}</version>
         </dependency>
-
-        <!-- ModernProtoc, used to decode and encode protobuf objects -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>${bouncy.castle.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.github.auties00</groupId>
             <artifactId>protoc-api</artifactId>
             <version>${protoc.version}</version>
         </dependency>
-
-        <!-- Jackson dependency, used for json operations -->
+        <dependency>
+            <groupId>com.github.auties00</groupId>
+            <artifactId>reflection</artifactId>
+            <version>${reflection.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-
-        <!-- Testing libraries -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.modules.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>${jackson.modules.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.auties00</groupId>
+            <artifactId>map-module</artifactId>
+            <version>${jackson.map.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.auties00</groupId>
+            <artifactId>curve25519</artifactId>
+            <version>${curve25519.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.classgraph</groupId>
+            <artifactId>classgraph</artifactId>
+            <version>${classgraph.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>${caffeine.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.auties00</groupId>
+            <artifactId>bytes</artifactId>
+            <version>${bytes.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -274,6 +274,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.goterl</groupId>
+            <artifactId>lazysodium-java</artifactId>
+            <version>${lazysodium.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
